--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,4 +18,12 @@
         android:layout_height="wrap_content"
         android:text="Flash Light"
         android:id="@+id/btnFlashLight"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Find places"
+        android:id="@+id/btnFindPlaces"
+        android:layout_below="@+id/btnFlashLight"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
