--- a/app/src/main/res/layout/activity_find_places.xml
+++ b/app/src/main/res/layout/activity_find_places.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <include layout="@layout/content_find_places" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabAddPlaces"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -15,11 +17,11 @@
         app:srcCompat="@android:drawable/ic_input_add"
         android:visibility="visible"/>
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true" tools:openDrawer="start">
+        android:fitsSystemWindows="true" tools:openDrawer="start"
+        android:visibility="visible">
 
         <android.support.design.widget.NavigationView android:id="@+id/nav_view"
             android:layout_width="wrap_content" android:layout_height="match_parent"
