--- a/app/src/main/res/layout/content_find_places.xml
+++ b/app/src/main/res/layout/content_find_places.xml
@@ -5,9 +5,10 @@
     android:id="@+id/layFindPlaceContainer">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:src="@drawable/demo_bg"
-        android:layout_gravity="center"/>
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/demo_bg"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
