--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,23 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="EditTextDarkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="android:textColor">@color/dark_color_control_text_color</item>
+        <item name="android:textColorHint">@color/dark_color_control_hint_color</item>
+        <item name="colorControlNormal">@color/dark_color_control_normal</item>
+        <item name="colorControlActivated">@color/dark_color_control_activated</item>
+        <item name="colorControlHighlight">@color/dark_color_control_highlight</item>
+    </style>
+
+    <style name="EditTextDarkStyle"  parent="Widget.AppCompat.EditText">
+
+        <item name="android:textColor">@color/dark_color_control_text_color</item>
+        <item name="android:textColorHint">@color/dark_color_control_hint_color</item>
+        <item name="android:theme">@style/EditTextDarkTheme</item>
+        <item name="colorControlNormal">@color/dark_color_control_normal</item>
+        <item name="colorControlActivated">@color/dark_color_control_activated</item>
+        <item name="colorControlHighlight">@color/dark_color_control_highlight</item>
+    </style>
+
 </resources>
