get current location of the user

--- a/app/src/main/res/layout/content_find_places.xml
+++ b/app/src/main/res/layout/content_find_places.xml
@@ -36,6 +36,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:textColor="#ff4500"
+            android:singleLine="true"
             android:text="this is a very long piece of text that will move" />
 
     </RelativeLayout>
