sql lite data creation for contact

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -39,4 +39,13 @@
         android:id="@+id/btnAlertDialog"
         android:layout_below="@+id/btnFindPlaces"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SQLite"
+        android:id="@+id/btnSQLite"
+        android:layout_below="@+id/btnAlertDialog"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
