--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -48,4 +48,12 @@
         android:layout_below="@+id/btnAlertDialog"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Webview"
+        android:id="@+id/btnWebview"
+        android:layout_below="@+id/btnSQLite"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
